--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,7 +8,7 @@ extends:
   - plugin:mocha/recommended
 overrides:
   - files:
-      - test/*.js
+      - test/*/*.js
     rules:
       func-names: off
       prefer-arrow-callback: off
