--- a/.github/workflows/basic-test.yml
+++ b/.github/workflows/basic-test.yml
@@ -13,4 +13,4 @@ jobs:
       - name: "Linting with ESLint"
         run: npm run lint
       - name: "Integration tests from supertest"
-        run: npm run integration-test
+        run: npm run integration:test
