--- a/.github/workflows/basic-test.yml
+++ b/.github/workflows/basic-test.yml
@@ -9,10 +9,10 @@ jobs:
 
     steps:
       - name: install packages
-        run: npm run install
+        run: npm install
       - name: "Unit tests from Mocha"
-        run: npm run test
+        run: npm test
       - name: "Linting with ESLint"
-        run: npm run lint
+        run: npm lint
       - name: "Integration tests from supertest"
-        run: npm run integration:test
+        run: npm integration:test
