--- a/.github/workflows/basic-test.yml
+++ b/.github/workflows/basic-test.yml
@@ -8,6 +8,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16.x
       - name: install packages
         run: npm install
       - name: "Unit tests from Mocha"
