--- a/.github/workflows/basic-test.yml
+++ b/.github/workflows/basic-test.yml
@@ -20,4 +20,4 @@ jobs:
       - name: "Linting with ESLint"
         run: npm run lint
       - name: "Integration tests from supertest"
-        run: npm integration:test
+        run: npm test:integration
