build: added test reporter to project

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint-fix": "eslint --fix .",
     "lint": "eslint .",
     "prepare": "husky install",
-    "test": "mocha test/unit --recursive",
+    "test": "mocha test/unit --recursive  --reporter json > test-results.json",
     "test:integration": "mocha test/integration"
   },
   "dependencies": {
