--- a/.github/workflows/basic-test.yml
+++ b/.github/workflows/basic-test.yml
@@ -21,3 +21,8 @@ jobs:
         run: npm run lint
       - name: "Integration tests from supertest"
         run: npm run test:integration
+      - uses: actions/upload-artifact@v2
+        if: success() || failure()
+        with:
+          name: test-results
+          path: test-results
