--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint .",
     "prepare": "husky install",
     "test": "mocha test/unit --recursive  --reporter json > test-results.json",
-    "test:integration": "mocha test/integration"
+    "test:integration": "mocha test/integration",
+    "coverage": "nyc npm run test && nyc npm run test:integration"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -27,6 +28,7 @@
     "eslint-plugin-mocha": "^10.1.0",
     "husky": "^8.0.0",
     "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
     "supertest": "^6.3.3"
   }
 }
