--- a/.github/workflows/basic-test.yml
+++ b/.github/workflows/basic-test.yml
@@ -21,8 +21,11 @@ jobs:
         run: npm run lint
       - name: "Integration tests from supertest"
         run: npm run test:integration
-      - uses: actions/upload-artifact@v2
+      - name: "Upload test results"
+        uses: actions/upload-artifact@v2
         if: success() || failure()
         with:
           name: test-results
           path: test-results
+      - name: "Coverage test"
+        run: npm run coverage
