--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "mocha test/unit --recursive  --reporter json > test-results.json",
     "test:integration": "mocha test/integration",
     "cover:report": "nyc report --reporter=lcov --reporter=text",
-    "coverage": "nyc --all npm test && nyc npm run test:integration && npm run cover:report && nyc check-coverage --statements 80 --branches 80 --functions 80 --lines 80"
+    "coverage": "nyc npm test && nyc npm run test:integration && npm run cover:report && nyc check-coverage  --statements 80 --branches 80 --functions 80 --lines 80"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
