--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "mocha test/unit --recursive  --reporter json > test-results.json",
     "test:integration": "mocha test/integration",
     "cover:report": "nyc report --reporter=lcov --reporter=text",
-    "coverage": "nyc npm test && nyc npm run test:integration && npm run cover:report && nyc check-coverage  --statements 80 --branches 80 --functions 80 --lines 80"
+    "coverage": "nyc npm test && nyc npm run test:integration && npm run cover:report && nyc check-coverage  --statements 80 --branches 80 --functions 80 --lines 80",
+    "wdio": "wdio run ./wdio.conf.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -23,6 +24,11 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
+    "@wdio/cli": "^8.10.2",
+    "@wdio/local-runner": "^8.10.2",
+    "@wdio/mocha-framework": "^8.10.2",
+    "@wdio/spec-reporter": "^8.10.2",
+    "chromedriver": "^113.0.0",
     "eslint": "^8.40.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -30,6 +36,7 @@
     "husky": "^8.0.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "wdio-chromedriver-service": "^8.1.1"
   }
 }
