--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -20,8 +20,8 @@ jobs:
           # Port mapping
           - 8080:8080
           - 50000:50000
-
-    # Steps that `container-job` runs
+  test-job:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 16.x
