--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -25,6 +25,8 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can
       # access it
       - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: npm install
       # Runs a single command using the runners shell
       - name: Run selenium test on webb22_alm_cicd
         run: npm run wdio --baseUrl http://localhost:8080
