--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -25,9 +25,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can
       # access it
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v1
         with:
-          node-version: "14"
+          node-version: "14.x"
       - name: Install dependencies
         run: npm install
       # Runs a single command using the runners shell
