--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -26,6 +26,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
+      - name: Set npm cache directory
+        run: npm config set cache /github/home/.npm-cache
       - name: Install dependencies
         run: npm install
       - name: Run selenium test on webb22_alm_cicd
