--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -12,6 +12,7 @@ jobs:
         ports:
           - 8080:8080
           - 8081:8081
+        options: --detach
 
     steps:
       - name: Checkout code
