--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -12,7 +12,7 @@ jobs:
         ports:
           - 8080:8080
           - 8081:8081
-        options: --detach
+        options: --detach-keys=ctrl-e
 
     steps:
       - name: Checkout code
