--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -12,7 +12,6 @@ jobs:
         ports:
           - 8080:8080
           - 8081:8081
-        options: --detach-keys=ctrl-e
 
     steps:
       - name: Checkout code
@@ -27,7 +26,7 @@ jobs:
         run: npm config set cache /github/home/.npm-cache
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Install WebDriverIO globally
         run: npm install -g webdriverio
