--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "webdriverio": "^8.10.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
