--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -8,7 +8,7 @@ jobs:
 
     services:
       webb22_alm_cicd:
-        image: ghcr.io/darkshiira/webb22_alm_cicd@sha256:5a549c6890d3911a2894d522e52c8ad8abd780dfe574f4a959bacd99fde24bee
+        image: ghcr.io/darkshiira/webb22_alm_cicd@shasha256:e838d3a75aa9a2b2eeed39fed23bffb3edd90e5c096e777f1f7a3261fb13914f
         ports:
           - 8080:8080
           - 8081:8081
