--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm config set cache /github/home/.npm-cache
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run Selenium tests
         run: npm run wdio
