--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -29,4 +29,4 @@ jobs:
         run: npm install
 
       - name: Run Selenium tests
-        run: npm run wdio
+        run: npm run wdio --spec ./test/e2e/specs/test.e2e.js
