--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "supertest": "^6.3.3",
-    "wdio-chromedriver-service": "^8.1.1"
+    "wdio-chromedriver-service": "10.1.0"
   }
 }
