--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -11,6 +11,6 @@ jobs:
 
       - name: Run Selenium tests in the Docker container
         run: |
-          docker run -d --name my-container ghcr.io/darkshiira/webb22_alm_cicd:main
+          docker run -d --name my-container --memory=4g ghcr.io/darkshiira/webb22_alm_cicd:main
           docker exec my-container npm run wdio --spec ./test/e2e/specs/test.e2e.js
           docker stop my-container && docker rm my-container
