--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -10,10 +10,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Installing dependencies
-        run: npm install --ignore-scripts
+        run: npm install
 
       - name: Run Selenium tests in the Docker container
         run: |
           docker run -d --name my-container ghcr.io/darkshiira/webb22_alm_cicd:main
-          docker exec my-container npx wdio run wdio.conf.js --spec ./test/e2e/specs/test.e2e.js
+          docker exec my-container npm run wdio --spec ./test/e2e/specs/test.e2e.js
           docker stop my-container && docker rm my-container
