--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Run Selenium tests in the Docker container
         run: |
-          docker run -d --name my-container -v $PWD:/app -w /app ghcr.io/darkshiira/webb22_alm_cicd:main npm run wdio --config ./wdio.conf.js --spec ./test/e2e/specs/test.e2e.js
+          docker run -d --name my-container -v $PWD:/app -w /app ghcr.io/darkshiira/webb22_alm_cicd:main npm run wdio --spec ./test/e2e/specs/test.e2e.js
           echo "Test execution logs:"
           docker logs my-container
           docker stop my-container && docker rm my-container
