--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -16,8 +16,8 @@ jobs:
         run: |
           docker run -d --name my-container -v $PWD:/app -w /app ghcr.io/darkshiira/webb22_alm_cicd:main npm run wdio --spec test/e2e/specs/test.e2e.js
 
-      - name: Wait for the container to finish
-        run: sleep 10s
+      - name: Wait for the container to start
+        run: sleep 20s
 
       - name: Show container logs
         run: docker logs my-container
