--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -15,19 +15,12 @@ jobs:
       - name: Run Selenium tests in the Docker container
         run: |
           docker run -d --name my-container -v $PWD:/app -w /app ghcr.io/darkshiira/webb22_alm_cicd:main npm run wdio --spec test/e2e/specs/test.e2e.js
-
-      - name: Wait for the container to start
-        run: sleep 20s
-
-      - name: Show container logs
-        run: docker logs my-container
-
-      - name: Change npm cache ownership
-        run: |
+          sleep 10s
+          docker logs my-container
+          docker start my-container
+          sleep 5s
           docker exec my-container chown -R 1001:123 /root/.npm
-
-      - name: Show updated container logs
-        run: docker logs my-container
+          docker logs my-container
 
       - name: Remove the container
         run: docker stop my-container && docker rm my-container
