--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -16,11 +16,7 @@ jobs:
         run: |
           docker run -d --name my-container -v $PWD:/app -w /app ghcr.io/darkshiira/webb22_alm_cicd:main npm run wdio --spec test/e2e/specs/test.e2e.js
           sleep 10s
-          docker logs my-container
-          docker start my-container
-          sleep 5s
           docker exec my-container chown -R 1001:123 /root/.npm
+          echo "Test execution logs:"
           docker logs my-container
-
-      - name: Remove the container
-        run: docker stop my-container && docker rm my-container
+          docker stop my-container && docker rm my-container
