--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Show container logs
         run: |
-          sleep 10sec
+          sleep 10s
           docker logs my-container
 
       - name: Change npm cache ownership
