--- a/.github/workflows/running-container.yml
+++ b/.github/workflows/running-container.yml
@@ -14,8 +14,9 @@ jobs:
 
       - name: Run Selenium tests in the Docker container
         run: |
-          docker run --name my-container -p 8080:3000 -p 9516:9516 -v $PWD:./bin/www -w ./bin/www ghcr.io/darkshiira/webb22_alm_cicd:main "npm run start & npm run wdio --spec test/e2e/specs/test.e2e.js"
+          docker run --name my-container -p 8080:3000 -p 9516:9516 -v $PWD:/app -w /app ghcr.io/darkshiira/webb22_alm_cicd:main npm run start
           sleep 5s
+          docker exec my-container npm run wdio --spec test/e2e/specs/test.e2e.js
           echo "Test execution logs:"
           docker logs my-container
           docker stop my-container && docker rm my-container
